fix: code block filename header overflow

--- a/sass/_user-agent-stylesheet.scss
+++ b/sass/_user-agent-stylesheet.scss
@@ -63,7 +63,7 @@ h6 {
   margin-bottom: 0;
   background-color: color(--color-code-bg);
   border-radius: $border-radius $border-radius 0 0;
-  width: max-content;
+  max-width: max-content;
   padding: $base-padding;
 }
 
